--- a/FRONTEND/components/Layout/login.html
+++ b/FRONTEND/components/Layout/login.html
@@ -18,11 +18,11 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="../../styles/mystyle.css">
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <script type="module" src="index.js"></script>
+    <!--<script type="module" src="../JS/index.js"></script>-->
 
     <style>
         
@@ -33,8 +33,8 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="http://localhost:5500/FRONTEND/signup.html">
-                <img src="./public/Expense Icon.png" alt="Expense Tracker" width="10%" height="10%" class="img-fluid rounded mt-1">
+              <a class="navbar-brand" href="http://localhost:5500/FRONTEND/components/Layout/login.html">
+                <img src="../../public/Expense Icon.png" alt="Expense Tracker" width="10%" height="10%" class="img-fluid rounded mt-1">
                 <p class="fs-4 fw-bold text-light d-inline-block align-text-top m-1">Expense Tracker</p>
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <div class="me-auto mb-2 mb-lg-0"></div> <!--class="me-auto mb-2 mb-lg-0"-->
-                <a class="btn btn-light text-light" href="http://localhost:5500/FRONTEND/signup.html" role="button">Login</a>
+                <a class="btn btn-light text-light" href="http://localhost:5500/FRONTEND/components/Layout/login.html" role="button">Login</a>
               </div>
             </div>
           </nav>
@@ -52,7 +52,7 @@
       <div class="toast-container position-fixed top-0 end-0 p-3">
         <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
-              <img src="./public/Expense Icon.png" class="rounded me-2" alt="Expense Tracker" width="20%" height="20%" />
+              <img src="../../public/Expense Icon.png" class="rounded me-2" alt="Expense Tracker" width="20%" height="20%" />
               <strong class="me-auto">Expense Tracker</strong>
               <!--<small>11 mins ago</small>-->
               <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
@@ -64,19 +64,12 @@
       </div>
     </div>
     <!--Create Account Text-->
-    <div class="container-fluid mt-5">
-        <p class="fs-4 fw-bold text-center">Create new account</p>
+    <div class="container-fluid my-5">
+        <p class="fs-4 fw-bold text-center">Sign in to your account</p>
     </div>
     <!--Form-->
-    <div class="container-fluid mt-4">
-      <form>
-          <div class="row mb-3">
-            <div class="col-sm-0 col-4"></div>
-            <div class="col-sm-4 col-12">
-              <label for="fullName" class="form-label fs-6 fw-semibold">Name</label>
-              <input type="text" class="form-control form-control-sm" id="fullName" placeholder="Full Name" required />
-            </div>
-          </div>
+    <div class="container-fluid mt-5">
+      <form id="login">
           <div class="row mb-3">
             <div class="col-sm-0 col-4"></div>
             <div class="col-sm-4 col-12">
@@ -91,17 +84,10 @@
               <input type="password" class="form-control form-control-sm" id="password" placeholder="********" minlength="8" maxlength="15" required />
             </div>
           </div>
-          <div class="row mb-3">
-            <div class="col-sm-0 col-4"></div>
-            <div class="col-sm-4 col-12">
-              <label for="confirmPassword" class="form-label fs-6 fw-semibold">Confirm Password</label>
-              <input type="password" class="form-control form-control-sm" id="confirmPassword" placeholder="********" minlength="8" maxlength="15" required />
-            </div>
-          </div>
           <div class="row my-4"> <!--class="d-grid gap-2 col-4 mx-auto"-->
             <div class="col-4"></div>
             <div class="d-grid col-sm-4">
-              <button class="btn btn-sm btn-primary" type="submit">Sign up</button>
+              <button class="btn btn-sm btn-primary" type="submit">Sign in</button>
             </div>
             <div class="col-4"></div>
           </div>
@@ -112,8 +98,8 @@
       <div class="row">
         <div class="col-sm-0 col-4"></div>
         <div class="col-sm-4 col-12 text-center">
-          <p class="fs-6 fw-light d-inline-block">Already have an account?</p>
-          <a href="http://localhost:5500/FRONTEND/signup.html" class="link">Login Here?</a>
+          <p class="fs-6 fw-light d-inline-block">Don't have an account?</p>
+          <a href="http://localhost:5500/FRONTEND/components/Layout/signup.html" class="link">Create here</a>
         </div>
       </div>
     </div>
