--- a/FRONTEND/components/Layout/header.html
+++ b/FRONTEND/components/Layout/header.html
@@ -11,7 +11,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <div class="me-auto mb-2 mb-lg-0"></div> <!--class="me-auto mb-2 mb-lg-0"-->
+                <div class="me-auto mb-2 mb-lg-0"></div>
                 <a class="btn btn-light text-light" href="http://localhost:5500/FRONTEND/components/Layout/login.html" role="button">Login</a>
               </div>
             </div>
