Final Leaderboard Optimisation

--- a/FRONTEND/components/Layout/expenses.html
+++ b/FRONTEND/components/Layout/expenses.html
@@ -123,7 +123,7 @@
         <table class="styled-table mx-2">
           <thead>
             <tr class="text-center">
-              <th scope="col" >ID</th>
+              <!--<th scope="col" >ID</th>-->
               <th scope="col">Amount</th>
               <th scope="col">Description</th>
               <th scope="col">Category</th>
