--- a/FRONTEND/components/Layout/forgotPassword.html
+++ b/FRONTEND/components/Layout/forgotPassword.html
@@ -47,19 +47,12 @@
       </div>
     </div>
     <!--Create Account Text-->
-    <div class="container-fluid mt-5">
-        <p class="fs-4 fw-bold text-center">Create new account</p>
+    <div class="container-fluid my-5">
+        <p class="fs-4 fw-bold text-center">Forgot Password</p>
     </div>
     <!--Form-->
-    <div class="container-fluid mt-4">
-      <form id="signup">
-          <div class="row mb-3">
-            <div class="col-sm-0 col-4"></div>
-            <div class="col-sm-4 col-12">
-              <label for="fullName" class="form-label fs-6 fw-semibold">Name</label>
-              <input type="text" class="form-control form-control-sm" id="fullName" placeholder="Full Name" required />
-            </div>
-          </div>
+    <div class="container-fluid mt-5">
+      <form id="forgotPassword">
           <div class="row mb-3">
             <div class="col-sm-0 col-4"></div>
             <div class="col-sm-4 col-12">
@@ -67,24 +60,10 @@
               <input type="email" class="form-control form-control-sm" id="emailId" placeholder="name@example.com" required />
             </div>
           </div>
-          <div class="row mb-3">
-            <div class="col-sm-0 col-4"></div>
-            <div class="col-sm-4 col-12">
-              <label for="password" class="form-label fs-6 fw-semibold">Password</label>
-              <input type="password" class="form-control form-control-sm" id="password" placeholder="********" minlength="8" maxlength="15" required />
-            </div>
-          </div>
-          <div class="row mb-3">
-            <div class="col-sm-0 col-4"></div>
-            <div class="col-sm-4 col-12">
-              <label for="confirmPassword" class="form-label fs-6 fw-semibold">Confirm Password</label>
-              <input type="password" class="form-control form-control-sm" id="confirmPassword" placeholder="********" minlength="8" maxlength="15" required />
-            </div>
-          </div>
-          <div class="row my-4"> <!--class="d-grid gap-2 col-4 mx-auto"-->
+          <div class="row my-4">
             <div class="col-4"></div>
             <div class="d-grid col-sm-4">
-              <button class="btn btn-sm btn-primary" type="submit">Sign up</button>
+              <button class="btn btn-sm btn-primary" type="submit">Send Verification Link</button>
             </div>
             <div class="col-4"></div>
           </div>
@@ -92,13 +71,13 @@
     </div>
     <!--Login Link-->
     <div class="container-fluid mb-2">
-      <div class="row">
-        <div class="col-sm-0 col-4"></div>
-        <div class="col-sm-4 col-12 text-center">
-          <p class="fs-6 fw-light d-inline-block">Already have an account?</p>
-          <a href="http://localhost:5500/FRONTEND/components/Layout/login.html" class="link">Login Here?</a>
+        <div class="row">
+          <div class="col-sm-0 col-4"></div>
+          <div class="col-sm-4 col-12 text-center">
+            <p class="fs-6 fw-light d-inline-block">Know Your Password?</p>
+            <a href="http://localhost:5500/FRONTEND/components/Layout/signup.html" class="link fs-6 fw-semibold">Login here</a>
+          </div>
         </div>
       </div>
-    </div>
   </body>
 </html>
