--- a/FRONTEND/components/Layout/login.html
+++ b/FRONTEND/components/Layout/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expense Tracker</title>
-    <link rel="icon" type="image/x-icon" href="./public/Expense Icon.png" />
+    <link rel="icon" type="image/x-icon" href="../../public/Expense Icon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -68,7 +68,7 @@
                         <label for="password" class="form-label fs-6 fw-semibold">Password</label>
                     </div>
                     <div class="col-6 text-end">
-                        <a href="#" class="link fs-6 fw-semibold">Forgot password?</a>
+                        <a href="http://localhost:5500/FRONTEND/components/Layout/forgotPassword.html" class="link fs-6 fw-semibold">Forgot password?</a>
                     </div>
                 </div>
               <input type="password" class="form-control form-control-sm" id="password" placeholder="********" minlength="8" maxlength="15" required />
