Report Generation Frontend (Premium Feature)

--- a/FRONTEND/components/Layout/expenses.html
+++ b/FRONTEND/components/Layout/expenses.html
@@ -51,13 +51,13 @@
     <!--Premium Membership-->
     <div class="container-fluid">
       <div class="row justify-content-end">
-        <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+        <div class="col-12 col-sm-12 col-md-10 col-lg-8 col-xl-8 col-xxl-6">
           <form id="buyPremiumMembership">
             <div class="row">
-              <div class="col-6">
+              <div class="col-4 col-sm-7 col-md-8 col-lg-8 col-xl-8 col-xxl-8 d-flex align-items-center justify-content-end">
                 <p class="text-end fw-bold" id="buyPremiumMembershipTxt" style="color: #6610f2;"></p>
               </div>
-              <div class="col-6" id="premiumBtnParent">
+              <div class="col-8 col-sm-5 col-md-4 col-lg-4 col-xl-4 col-xxl-4 d-flex align-items-center justify-content-start" id="premiumBtnParent">
                 <label>
                   <button type="button" class="btn btn-sm btn-success" id="buyPremiumMembershipBtn">Buy Premium Membership</button>
                 </label>
