Report Generation Backend (Premium Feature)

--- a/FRONTEND/components/Layout/expenses.html
+++ b/FRONTEND/components/Layout/expenses.html
@@ -151,5 +151,21 @@
         </table>
       </div>
     </div>
+    <!--Downloaded Files-->
+    <div id="downloadedFile-list">
+      <div class="container mt-5">
+        <h4 class="text-center">LIST OF DOWNLOADED FILES</h1>
+      </div>
+      <div class="table-responsive">
+        <table class="styled-table mx-2">
+          <thead>
+            <tr class="text-center">
+              <th scope="col" >File Link</th>
+            </tr>
+          </thead>
+          <tbody class="downloadedFile-table"></tbody>                  
+        </table>
+      </div>
+    </div>
   </body>
 </html>
