Paginating the expenses

--- a/FRONTEND/components/Layout/expenses.html
+++ b/FRONTEND/components/Layout/expenses.html
@@ -114,6 +114,22 @@
         </div>
       </form>
     </div>
+    <!--Downloaded Files-->
+    <div id="downloadedFile-list">
+      <div class="container mt-5">
+        <h4 class="text-center">LIST OF DOWNLOADED FILES</h1>
+      </div>
+      <div class="table-responsive">
+        <table class="styled-table mx-2">
+          <thead>
+            <tr class="text-center">
+              <th scope="col" >File Link</th>
+            </tr>
+          </thead>
+          <tbody class="downloadedFile-table"></tbody>                  
+        </table>
+      </div>
+    </div>
     <!--Expense List-->
     <div id="expense-list">
       <div class="container mt-5">
@@ -133,6 +149,11 @@
           <tbody class="expense-table"></tbody>                  
         </table>
       </div>
+      <div class="container mt-3">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination pagination-lg"></ul>
+        </nav>
+      </div>
     </div>
     <!--LeaderBoard-->
     <div id="leaderBoard-list">
@@ -148,22 +169,6 @@
             </tr>
           </thead>
           <tbody class="leaderBoard-table"></tbody>                  
-        </table>
-      </div>
-    </div>
-    <!--Downloaded Files-->
-    <div id="downloadedFile-list">
-      <div class="container mt-5">
-        <h4 class="text-center">LIST OF DOWNLOADED FILES</h1>
-      </div>
-      <div class="table-responsive">
-        <table class="styled-table mx-2">
-          <thead>
-            <tr class="text-center">
-              <th scope="col" >File Link</th>
-            </tr>
-          </thead>
-          <tbody class="downloadedFile-table"></tbody>                  
         </table>
       </div>
     </div>
