--- a/FRONTEND/components/Layout/expenses.html
+++ b/FRONTEND/components/Layout/expenses.html
@@ -133,7 +133,26 @@
     <!--Expense List-->
     <div id="expense-list">
       <div class="container mt-5">
-        <h4 class="text-center">LIST OF EXPENSES</h1>
+        <div class="row justify-content-end">
+          <div class="col-4">
+            <h4 class="text-center">LIST OF EXPENSES</h4>
+          </div>
+          <div class="col-4">
+            <!--Dropdown-->
+            <select class="form-select form-select-sm" aria-label="Default select example" name="listRange" id="listRange">
+              <option value="5" selected>5</option>
+              <option value="10">10</option>
+              <option value="15">15</option>
+              <option value="20">20</option>
+              <option value="25">25</option>
+              <option value="30">30</option>
+              <option value="35">35</option>
+              <option value="40">40</option>
+              <option value="45">45</option>
+              <option value="50">50</option>
+            </select>            
+          </div>
+        </div>
       </div>
       <div class="table-responsive">
         <table class="styled-table mx-2">
