--- a/FRONTEND/components/Layout/expenses.html
+++ b/FRONTEND/components/Layout/expenses.html
@@ -155,7 +155,7 @@
         </div>
       </div>
       <div class="table-responsive">
-        <table class="styled-table mx-2">
+        <table class="styled-table mx-2" style="table-layout: fixed;">
           <thead>
             <tr class="text-center">
               <!--<th scope="col" >ID</th>-->
