--- a/FRONTEND/components/Layout/header.html
+++ b/FRONTEND/components/Layout/header.html
@@ -3,7 +3,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="http://localhost:5500/FRONTEND/components/Layout/login.html">
+              <a class="navbar-brand" href="http://localhost:5500/FRONTEND/components/Layout/expenses.html">
                 <img src="../../public/Expense Icon.png" alt="Expense Tracker" width="10%" height="10%" class="img-fluid rounded mt-1">
                 <p class="fs-4 fw-bold text-light d-inline-block align-text-top m-1">Expense Tracker</p>
               </a>
@@ -12,7 +12,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <div class="me-auto mb-2 mb-lg-0"></div>
-                <a class="btn btn-light text-light" href="http://localhost:5500/FRONTEND/components/Layout/login.html" role="button">Login</a>
+                <a class="btn btn-light text-light" href="http://localhost:5500/FRONTEND/components/Layout/login.html" role="button" id="loginBtn">Login</a>
               </div>
             </div>
           </nav>
